5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1595_1016.log
== TEST (2019-03-22 11:46:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5)

-- ERROR:
File "XXXX", line 13
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:46:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5)
-- EXECUTION TIME:
0.158696
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 13
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:46:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5)
-- ERROR:
File "XXXX", line 13
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:46:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5)
-- ERROR:
File "XXXX", line 14
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:46:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    A=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:47:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5))
-- EXECUTION TIME:
0.173733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    A=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:47:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    A=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:47:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=int(input(""))
b=int(input(""))
c=int(input(""))

s=(a+b+c)//2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=int(input(""))
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:48:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=int(input(""))
b=int(input(""))
c=int(input(""))

s=(a+b+c)/2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=int(input(""))
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:48:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=int(input(""))
b=int(input(""))
c=int(input(""))

s=(a+b+c)/2

A=sqrt(s(s-a)(s-b)(s-c))

print(round(s,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=int(input(""))
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:49:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:50:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=(input("")
b=(input("")
c=(input("")

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- ERROR:
File "XXXX", line 6
    b=(input("")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:50:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=(input("")
b=(input("")
c=(input("")

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- EXECUTION TIME:
0.197203
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 6
    b=(input("")
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:50:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("")
b=input("")
c=input("")

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- EXECUTION TIME:
0.166878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    s=(a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:50:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("")
b=input("")
c=input("")

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- EXECUTION TIME:
0.148312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    s=(a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:50:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("")
b=input("")
c=input("")

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    s=(a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:50:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- EXECUTION TIME:
0.157868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    Area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:50:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:51:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=a+b+c/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- EXECUTION TIME:
0.242088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 11, in <module>
    Area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:51:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=a+b+c/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:52:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)s-c)

print(round(Area,5))
-- ERROR:
File "XXXX", line 11
    Area=sqrt(s(s-a)(s-b)s-c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:52:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=sqrt(s(s-a)(s-b)(s-c))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:52:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=float(sqrt(s(s-a)(s-b)(s-c)))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=float(sqrt(s(s-a)(s-b)(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:52:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

Area=float(sqrt(s(s-a)(s-b)(s-c)))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=float(sqrt(s(s-a)(s-b)(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:53:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=float((a+b+c)/2)

Area=float(sqrt(s(s-a)(s-b)(s-c)))

print(round(Area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=float(sqrt(s(s-a)(s-b)(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:55:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=float((a+b+c)/2)
print(s)
Area=float(sqrt(s(s-a)(s-b)(s-c)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Area=float(sqrt(s(s-a)(s-b)(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:55:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=float((a+b+c)/2)
print(s)



-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:56:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
area=sqrt(s(s-a)(s-b)(s-c))
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:56:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
area=sqrt(s(s-a)(s-b)(s-c))
print(s)



-- EXECUTION TIME:
0.146378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 10, in <module>
    area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:56:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
area=sqrt(s(s-a)(s-b)(s-c))
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area=sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:59:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
area= sqrt(s(s-a)(s-b)(s-c))
print(round(area,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area= sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:00:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
area= (s(s-a)(s-b)(s-c))**1/2
print(round(area,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area= (s(s-a)(s-b)(s-c))**1/2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:03:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
grande= sqrt(s(s-a)(s-b)(s-c))
print(round(grande,5))


-- EXECUTION TIME:
0.171382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 10, in <module>
    grande= sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:03:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2
grande= sqrt(s(s-a)(s-b)(s-c))
print(round(grande,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    grande= sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:31:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

area= s(s-a)(s-b)(s-c)
x=sqrt(area)

print(round(x,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    area= s(s-a)(s-b)(s-c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:32:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

area= s*(s-a)*(s-b)*(s-c)
x=sqrt(area)

print(round(x,5))


-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:32:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input(""))
b=float(input(""))
c=float(input(""))

s=(a+b+c)/2

area= s*(s-a)*(s-b)*(s-c)
x=sqrt(area)

print(round(x,5))


-- EXECUTION TIME:
0.217551
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
